--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <link rel="import" href="game-of-life.html">
   </head>
   <body>
-    <game-of-life></game-of-life>
+    <game-of-life gridsize="10"></game-of-life>
   </body>
 </html>
