--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
   </head>
   <body>
     <game-of-life gridsize="10"></game-of-life>
+
+    <br/><br/>
+
+    <a href="https://github.com/brophdawg11/game-of-life-polymer" target="blank">GitHub</a>
   </body>
 </html>
