--- a/game-of-life.html
+++ b/game-of-life.html
@@ -22,6 +22,8 @@
       <h2>Conway's Game of Life</h2>
     </a>
 
+    <p>Implemented using Polymer</p>
+
     <p>Click cells to toggle their state, and click Start below to begin</p>
 
     <table cellspacing="0" cellpadding="0">
